# guru-android-sdk

./: .gitignore  README.md  settings.gradle
buildSrc/: build.gradle
buildSrc/src/main/kotlin/ai/getguru/gradle/: InstallNativeLibsTask.kt
gradle/wrapper/: gradle-wrapper.properties
guru-android-sdk/: build.gradle
guru-android-sdk/src/androidTest/java/ai/getguru/androidsdk/: ExampleInstrumentedTest.kt
guru-android-sdk/src/main/: AndroidManifest.xml
guru-android-sdk/src/main/java/ai/getguru/androidsdk/: Analysis.kt  AnalysisClient.kt  BoundingBox.kt  FrameInference.kt  GuruVideo.kt  GuruVideoImpl.kt  IPoseEstimator.kt  ImageUtils.kt  InferenceLandmark.kt  Keypoint.kt  Keypoints.kt  KeypointsFilter.kt  ModelStore.kt  NcnnPoseEstimator.kt  OnnxPoseEstimator.kt  PoseEstimator.kt  PoseTracker.kt  Rep.kt  TorchLitePoseEstimator.kt  UserFacing.kt  Version.kt
guru-android-sdk/src/main/jni/: CMakeLists.txt
guru-android-sdk/src/main/jni/src/: onnx.cpp  onnx.h  pose.cpp  pose.h  pose_jni.cpp  preprocess.cpp  preprocess.h
guru-android-sdk/src/main/res/values/: strings.xml
guru-android-sdk/src/test/java/ai/getguru/androidsdk/: AnalysisClientTest.kt  ExampleUnitTest.kt
